Add backing directory for Tailwind CSS build
Add backing directory step for Tailwind build process.

--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -37,6 +37,11 @@ jobs:
           cd todo/theme/static_src     
           npm install
 
+      - name: backing directory for tailwind build
+        run: |
+          cd todo     
+           
+
       - name: Build Tailwind CSS
         run: |
           python manage.py tailwind build
