Change directory to 'todo' before collecting static files

--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Collect static files
         run: |
+          cd todo
           python manage.py collectstatic --noinput
 
       - name: Upload static output as GitHub Pages artifact
